# hallucination-detector

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  update_resume.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
backend/: requirements.txt
backend/app/: config.py  main.py  models.py
backend/app/routes/: chat.py
backend/app/services/: detector.py  llm.py
benchmarks/: dataset.json  evaluate.py
examples/: quickstart.py
server/: app.py  config.py  llm.py  routes.py
src/hallucination_detector/: __init__.py  aggregator.py  claims.py  config.py  core.py  coverage.py  models.py  retriever.py  scorer.py  selfcheck.py
tests/: test_detect.py
