[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hallucination-detector"
version = "0.1.0"
description = "Detect hallucinations in LLM outputs. Claim-level extraction, evidence retrieval, NLI scoring."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Jay Dasondee" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pydantic>=2.0", "spacy>=3.6", "sentence-transformers>=2.2", "numpy>=1.24"]

[project.optional-dependencies]
server = ["fastapi>=0.100", "uvicorn[standard]>=0.20", "anthropic>=0.20", "pydantic-settings>=2.0"]
ml = ["spacy>=3.6", "sentence-transformers>=2.2", "torch>=2.0", "scikit-learn>=1.3"]
retrieval = ["chromadb>=0.4", "faiss-cpu>=1.7"]
all = ["hallucination-detector[server,ml,retrieval]"]
dev = ["pytest>=7.0", "ruff>=0.1", "mypy>=1.5"]

[project.scripts]
hallucination-detector = "server.app:cli"

[project.urls]
Homepage = "https://github.com/JKDasondee/hallucination-detector"
Repository = "https://github.com/JKDasondee/hallucination-detector"

[tool.hatch.build.targets.wheel]
packages = ["src/hallucination_detector"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
